Update: - update get remote TD endpoint
