# src/api/proxy/controller.ts
@@ -59,32 +59,46 @@ export const receiveEvent: EventCtrl = async (req, res) => {
       }
   }
 
-type DiscoveryCtrl = expressTypes.Controller<{ oid: string }, { sparql: string } | undefined, {}, { wrapper: JsonType }, PermissionLocals>
+type DiscoveryCtrl = expressTypes.Controller<{ oid: string }, { sparql?: string, oids?: string } | undefined, {}, { wrapper: JsonType }, PermissionLocals>
 
 export const discovery: DiscoveryCtrl = async (req, res) => {
     const { oid } = req.params
-    const query = req.body ? req.body.sparql : undefined // Gateway sends the sparql wrapped as a JSON
     const { relationship, items } = res.locals
     const { originId } = res.locals
     if (!Config.WOT.ENABLED) {
       throw new Error('Remote Node does not support semantic discovery...')
     }
+    if (!req.body) {
+      throw new Error('Not valid body. Include oids or sparql')
+    }
     try {
-      let data
-      if (!query) {
-        logger.info('Received TD discovery to ' + oid)
-        data = await Data.tdDiscovery(oid, originId, relationship, items)
-      } else {
-        if (typeof query !== 'string') {
+      // SPARQL request
+      if (req.body?.sparql) {
+        if (typeof req.body.sparql !== 'string') {
           return responseBuilder(HttpStatusCode.BAD_REQUEST, res, 'Sparql query has to be a string')
         }
         logger.info('Received Sparql discovery to ' + oid)
-        data = await Data.sparqlDiscovery(oid, originId, relationship, query, items)
+        const data = await Data.sparqlDiscovery(oid, originId, relationship, req.body.sparql, items) 
+        return responseBuilder(HttpStatusCode.OK, res, null, { wrapper: data })
       }
-      return responseBuilder(HttpStatusCode.OK, res, null, { wrapper: data })
+      // TD request
+      if (req.body.oids) {
+        logger.info('Received TD discovery to ' + oid)
+        // for all requeted oids
+        const oidsArray = req.body.oids.split(',')
+        const data = await Promise.all(oidsArray.map(async (oid: string) => {
+          try {
+              return  { oid, success: true, td: (await Data.tdDiscovery(oid, originId, relationship, items)).message }
+          } catch {
+            return { oid, success: false }
+          }
+        })) as JsonType
+        return responseBuilder(HttpStatusCode.OK, res, null, { wrapper: data })
+      }
+      throw new Error('Not valid body. In clude oids or sparql')
     } catch (err) {
       const error = errorHandler(err)
-      console.log('Error while returning discovery')
+      logger.error('Error while returning discovery')
       logger.error(error.message)
       return responseBuilder(error.status, res, error.message)
     }
