# src/docs/swagger.json
@@ -634,7 +634,7 @@
         }
       }
     },
-    "/api/discovery/remote/td/{id}/{originId}": {
+    "/api/discovery/remote/td/{agid}": {
       "get": {
         "summary": "Discover a remote item's semantic description",
         "description": "Remote discovery. Get thing descriptions of remote objects that some of your objects can see. \n\nSet the OID of the object you want to reach with **id** parameter and set the OID of the object initiating the request with **originID** (originID must be a neighbour of the target oid). \n",
@@ -649,23 +649,24 @@
         "parameters": [
           {
             "in": "path",
-            "name": "id",
+            "name": "agid",
             "required": true,
-            "description": "Object id - OID",
+            "description": "Remote gateway - agid",
             "schema": {
               "type": "string",
               "default": "0000-0000-0000"
             }
           },
           {
-            "in": "path",
-            "name": "originId",
-            "required": true,
-            "description": "Object id - OID",
+            "in": "query",
+            "name": "oids",
+            "description": "Comma separated list of remote OIDS",
             "schema": {
               "type": "string",
-              "default": "0000-0000-0000"
-            }
+              "default": "oid1,oid2"
+            },
+            "style": "form",
+            "required": true
           }
         ],
         "responses": {
